perf(view): cache rasterized parallax towers
ParallaxScrollPanel now rasterizes each background tower once into a
BufferedImage held in a WeakHashMap cache instead of redrawing block
by block every frame, with a rebound-refresh timer for resizes.
MainMenuPanel title backdrop tuned to a dark purple.